--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
   "homepage": "https://github.com/alexsophiekim/thread-back-end#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "mongoose": "^5.7.1",
-    "nodemon": "^1.19.2"
-  },
+    "mongoose": "^5.7.1"
+  }
 }
