--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
   },
   "homepage": "https://github.com/alexsophiekim/thread-back-end#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.7.1"
+    "mongoose": "^5.7.1",
+    "multer": "^1.4.2"
   }
 }
