--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "grunt-contrib-jshint": "^2.1.0",
     "grunt-contrib-watch": "^1.1.0",
     "mongoose": "^5.7.1",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "nodemon": "^1.19.2"
   },
   "devDependencies": {
     "grunt": "^1.0.4"
