--- a/package.json
+++ b/package.json
@@ -29,13 +29,13 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "grunt-contrib-jshint": "^2.1.0",
-    "grunt-contrib-watch": "^1.1.0",
     "mongoose": "^5.7.1",
-    "multer": "^1.4.2",
-    "nodemon": "^1.19.2"
+    "multer": "^1.4.2"
   },
   "devDependencies": {
-    "grunt": "^1.0.4"
+    "grunt": "^1.0.4",
+    "grunt-contrib-jshint": "^2.1.0",
+    "grunt-contrib-watch": "^1.1.0",
+    "nodemon": "^1.19.2"
   }
 }
